exports[`test SignupForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Ready to join the Marketplace?
    </h1>
    <p>
      We’re looking for the very best digital businesses to help deliver 21st century products and services to government.
    </p>
    <p>
      If you think you have what it takes, you can apply right here.
    </p>
    <p>
      You’ll be asked to create a profile about your business and, if you meet our 
      <a
        href="/assessment-criteria">
        evaluation criteria
      </a>
      , you\'ll be able to do business in the Marketplace.
    </p>
  </header>
  <article
    role="main">
    <form
      action={undefined}
      id="signup"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Full name
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="name"
          maxLength={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Create your seller account" />
      <p>
        <small>
          By creating a seller account you agree to the 
          <a
            href="/terms-of-use">
            Terms of Use
          </a>
          .
        </small>
      </p>
    </form>
  </article>
</div>
`;

exports[`test SignupForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Ready to join the Marketplace?
    </h1>
    <p>
      We’re looking for the very best digital businesses to help deliver 21st century products and services to government.
    </p>
    <p>
      If you think you have what it takes, you can apply right here.
    </p>
    <p>
      You’ll be asked to create a profile about your business and, if you meet our 
      <a
        href="/assessment-criteria">
        evaluation criteria
      </a>
      , you\'ll be able to do business in the Marketplace.
    </p>
  </header>
  <article
    role="main">
    <form
      action="/foo/bar"
      id="signup"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Full name
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="name"
          maxLength={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Create your seller account" />
      <p>
        <small>
          By creating a seller account you agree to the 
          <a
            href="/terms-of-use">
            Terms of Use
          </a>
          .
        </small>
      </p>
    </form>
  </article>
</div>
`;
